# escpos2mqtt

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-docs.yml  release.yaml
book/: book.toml
book/src/: SUMMARY.md  command-reference.md  deployment.md  introduction.md
src/: discovery_service.rs  lib.rs  main.rs  mini_crossword.rs  minicrossword.rs  mqtt_service.rs  printer.rs  program.rs  registry.rs  string_serializer.rs
src/mqtt/: homeassistant.rs  mod.rs  string_serializer.rs  topics.rs
src/printer/: discover.rs  mod.rs
src/program/: doc_macros.rs  documentation.rs  mod.rs  parser.rs
src/renderer/: mini_crossword.rs  mod.rs  sudoku.rs
tests/: test_doc_macros.rs
