[package]
name = "escpos2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
envconfig = "0.11.0"
escpos = "0.17.0"
log = "0.4.28"
mqtt-typed-client = {version = "0.1.0", features = ["json"] }
mqtt-typed-client-core = "0.1.0"
mqtt-typed-client-macros = "0.1.0"
nom = "8.0.0"
rustoku-lib = "0.12.2"
serde = "1.0.225"
serde_json = "1.0.145"
tokio = "1.47.1"
uuid = {version = "1.18.1", features = ["v4"]}
