[package]
name = "escpos2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
envconfig = "0.11.0"
escpos = {version = "0.17.0", features = ["graphics"] }
jiff = {version = "0.2.15", features = ["serde"] }
log = "0.4.28"
mqtt-typed-client = {version = "0.1.0", features = ["json"] }
mqtt-typed-client-core = "0.1.0"
mqtt-typed-client-macros = "0.1.0"
nom = "8.0.0"
resvg = "0.45.1"
rustoku-lib = "0.12.2"
serde = "1.0.225"
serde_json = "1.0.145"
textwrap = "0.16.2"
tokio = "1.47.1"
unicode-width = "0.2.1"
ureq = {version = "3.1.2", features = ["json"]}
uuid = {version = "1.18.1", features = ["v4"]}
