[package]
name = "escpos2mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
envconfig = "0.11.0"
escpos = {version = "0.17.0", features = ["graphics"] }
escpos-db = "0.1.2"
futures = "0.3.31"
jiff = {version = "0.2.15", features = ["serde"] }
log = "0.4.28"
mqtt-typed-client = {version = "0.1.0", features = ["json"] }
mqtt-typed-client-core = "0.1.0"
mqtt-typed-client-macros = "0.1.0"
nom = "8.0.0"
once_cell = "1.20.2"
reqwest = {version = "0.12.23", features = ["json", "rustls-tls", "http2"], default-features = false }
resvg = "0.45.1"
rustoku-lib = "0.12.2"
serde = "1.0.225"
serde_json = "1.0.145"
snmp2 = {version = "0.4.9", features = ["tokio"] }
textwrap = "0.16.2"
thiserror = "2.0.16"
tokio = "1.47.1"
unicode-width = "0.2.1"
uuid = {version = "1.18.1", features = ["v4"]}
